# fyiban

./: .gitignore  LICENSE  README.md  config.json  crypter.py  index.py  requirements.txt  setup.cfg  submit.py  test.py  utils.py  yiban.py
.github/workflows/: django.yml  main.yaml  main.yml  python-publish.yml  update_version.py  yiban.yaml
archive/: index.py
examples/: example-01-获取信息.py  example-01.py  example-02-表单加解密.py  example-03-健康打卡  example-03-健康打卡.py  example-04-晚点签到.py
tests/: ApiTest.py  TaskApiTest.py  TestConfig.py
yiban/: __init__.py  base.py  signin.py  submit.py  yiban.py
yiban/Apis/: Task.py  User.py  Yiban.py  __init__.py
yiban/Core/: BaseReq.py  BaseYiban.py  EpidemicPrevention.py  Login.py  SMCaptcha.py  STask.py  SchoolBased.py  SchoolBasedAuth.py  TaskFeedback.py  __init__.py
