[metadata]
name = fyiban
version = attr: yiban.__version__
author = Sricor
author_email = josricor@outlook.com
description = Apis lib for yiban.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/sricor/yiban
project_urls =
    Source = https://github.com/sricor/yiban
    Bug Tracker = https://github.com/sricor/yiban/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Environment :: Console
    Natural Language :: Chinese (Simplified)
    Development Status :: 4 - Beta
keywords = yiban school task health
[options]
package_dir =
    = .
packages = find:
install_requires =
    requests
    pycryptodome
[options.packages.find]
where = .
exclude =
    tests
    examples