[metadata]
name = fyiban
version = attr: yiban.__version__
author = Qs315490
author_email = qs315490@qq.com
description = Apis lib for yiban.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/Qs315490/fyiban
project_urls =
    Source = https://github.com/Qs315490/fyiban
    Bug Tracker = https://github.com/Qs315490/fyiban/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Environment :: Console
    Natural Language :: Chinese (Simplified)
    Development Status :: 4 - Beta
keywords = yiban school task health
[options]
package_dir =
    = .
packages = find:
install_requires =
    requests
    pycryptodome
[options.packages.find]
where = .
exclude =
    tests
    examples